--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,23 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <select class="breed-select"></select>
-    </body>
-    <p class="loader">
-      <span class="loader"></span>
-    </p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-    <div class="cat-info"></div>
+    <div class="container">
+      <h1>CATS, CATS, CATS!!!</h1>
+    </br>
+    </br>
+    </br>
+      <div class="selector-div">
+        <select class="breed-select"></select>
+      </div>
 
+      <p class="loader"><span class="loader"></span></p>
+      <p class="error hidden">
+        Oops! Something went wrong! Try reloading the page!
+      </p>
+      </div>
+      <div class="cat-info">
+      </div>
+    
     <script src="index.js" type="module"></script>
   </body>
 </html>
